examples/test/testpolicy3404.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3404
  namespace: namespace425
spec:
  podSelector:
    matchLabels:
      key16: value16
      key11: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value28
      podSelector:
        matchLabels:
          key19: value10
          key23: value42
          key3: value16
